<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application -->
    <string name="app_name">YinYang</string>

    <!-- User Profile -->
    <string name="title_activity_user_profile">User Profile</string>
    <string name="reputation_text">Reputation</string>
    <string name="reputation_score">0</string>
    <string name="nr_gold_coins">0</string>
    <string name="nr_silver_coins">0</string>
    <string name="nr_bronze_coins">0</string>
    <string name="gold_coin_description">Gold coins</string>
    <string name="silver_coin_description">Silver coins</string>
    <string name="bronze_coin_description">Bronze coins</string>
    <string name="user_picture_description">User picture</string>
    <string name="button_favorite_question">Favorites</string>
    <string name="button_questions">Questions</string>
    <string name="button_answers">Answers</string>
    <string name="button_tags">Tags</string>
    <string name="button_reputation">Reputation</string>
    <string name="button_badges">Badges</string>
    <string name="button_activities">Activities</string>
    <string name="user_name_label">User name: </string>
    <string name="user_name">Ana</string>
    <string name="website_label">Website: </string>
    <string name="website">www.google.com</string>
    <string name="location_label">Location: </string>
    <string name="location">Sweden</string>
    <string name="age_label">Age: </string>
    <string name="age">23</string>
    <string name="membership_duration_label">Member for: </string>
    <string name="membership_duration">4 months</string>
    <string name="last_seen_label">Last seen: </string>
    <string name="last_seen">5 minutes</string>
    <string name="profile_views_label">Profile views: </string>
    <string name="profile_views">2</string>
    <string name="user_description_label">User description: </string>
    <string name="user_description">Some descriprion here</string>
    <string name="no_question_by_user">User haven\'t posted any questions</string>

    <!-- Main Acitivty View -->
    <string name="TestUserProfile1">Existing user</string>
    <string name="TestUserProfile2">Non-existing user</string>
    <string name="TestSearch">Test to get information from the database</string>
    <string name="TestText">Test the different functionality</string>
    <string name="TestQuestionView1">Test the question view</string>
    <string name="TestQuestionView2">Test the question view (no answer)</string>
    <string name="Users">Users</string>

    <!-- FreeTextSearchActivity -->
    <string name="title_activity_free_text_search">Search for posts</string>
    <string name="string_search">Search for posts</string>
    <string name="search_command">Search</string>
    <string name="FreeTextSearch">Free text search</string>
    <string name="title_activity_tab_search">Search for posts</string>
    <string name="TagSearch">Tag search</string>
    <string name="TestSearchTopTags">Test top related tags</string>
    <string name="title_activity_top_related_tags">TopRelatedTagsActivity</string>

    <!-- Question Activity -->
    <string name="title_activity_question">Question and answers</string>
    <string name="button_tag1">tag1</string>
    <string name="button_tag2">tag2</string>
    <string name="button_tag3">tag3</string>
    <string name="nr_of_answers">anwer(s)</string>
    <string name="enter_answer">Enter answer...</string>
    <string name="button_add">+</string>
    <string name="your_answer">Your answer</string>
    <string name="no_answer">There exists no accepted answers yet.</string>

    <!-- SearchResultActivity -->
    <string name="title_activity_searchResult"></string>
    <string name="button_sort_by_user_reputation">User reput.</string>
    <string name="button_sort_by_answer_count">Answer count</string>
    <string name="button_sort_by_creation_date">Creation date</string>
    <string name="button_sort_by_question_score">Question score</string>
    <string name="show_prev_posts">Show previous posts</string>
    <string name="show_next_posts">Show next posts</string>

    <!-- TabSearchActivity -->
    <string name="tag_search">Search for tag</string>
    <string name="error_no_search_parameters">Please enter search text</string>

    <!-- UserListActivity -->
    <string name="title_activity_user_list">Users</string>
    <string name="user_search">Search user</string>
    <string name="show_next_users">Show next users</string>
    <string name="title_activity_not_implemented">Not implemented</string>

    <!-- Not implemented activity -->
    <string name="not_implemented">This view is not implemented... yet</string>

    <!-- Settings -->
    <string name="pref_heat_mapping">Relevance by heat</string>
    <string name="pref_heat_mapping_summary">Colors show how hot the search result is.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Menus -->
    <string name="menu_action_search">Search</string>
    <string name="menu_action_user_list">Users</string>
    <string name="menu_action_settings">Settings</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>