<GridLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gridLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentRight="true"
    android:layout_centerVertical="true"
    android:layout_marginRight="82dp"  >
    
    <LinearLayout
        android:id="@+id/leftColumnLayout"
        android:layout_width="100dp"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/reputation_text" />

        <TextView
            android:id="@+id/reputationScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/reputation_score" />

        <LinearLayout
            android:id="@+id/badgeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/gold_coin_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/gold_coin_description"
                android:src="@drawable/gold_coin" />

            <TextView
                android:id="@+id/nr_gold_coins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nr_gold_coins" />

            <ImageView
                android:id="@+id/silver_coin_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/silver_coin_description"
                android:src="@drawable/silver_coin" />

            <TextView
                android:id="@+id/nr_silver_coins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nr_silver_coins" />

            <ImageView
                android:id="@+id/bronze_coin_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/bronze_coin_description"
                android:src="@drawable/bronze_coin" />

            <TextView
                android:id="@+id/nr_bronze_coins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nr_bronze_coins" />
        </LinearLayout>

        <ImageView
            android:id="@+id/user_picture_image"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/user_picture_description"
            android:src="@drawable/user_picture" />
        <!-- Buttons -->

        <Button
            android:id="@+id/favorite_questions_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="favoriteQuestionsView"
            android:text="@string/button_favorite_question"
            android:textSize="12sp" />

        <Button
            android:id="@+id/questions_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="questionsView"
            android:text="@string/button_questions"
            android:textSize="12sp" />

        <Button
            android:id="@+id/answers_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="answersView"
            android:text="@string/button_answers"
            android:textSize="12sp" />

        <Button
            android:id="@+id/tags_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="tagsView"
            android:text="@string/button_tags"
            android:textSize="12sp" />

        <Button
            android:id="@+id/reputation_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="reputationView"
            android:text="@string/button_reputation"
            android:textSize="12sp" />

        <Button
            android:id="@+id/badges_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="badgesView"
            android:text="@string/button_badges"
            android:textSize="12sp" />

        <Button
            android:id="@+id/activities_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="activitiesView"
            android:text="@string/button_activities"
            android:textSize="12sp" />
    </LinearLayout>

	<TextView
	    android:id="@+id/textView1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/hello_world" />
	    
</GridLayout>