<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TestText" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showUserList"
        android:text="@string/Users" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:layout_height="wrap_content"
            android:layout_width="1dp"
            android:layout_weight="1"
            android:onClick="testUserProfile1"
            android:text="@string/TestUserProfile1" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="1dp"
            android:layout_weight="1"
            android:onClick="testUserProfile2"
            android:text="@string/TestUserProfile2" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="testSearch"
        android:text="@string/TestSearch"
        android:visibility="visible" />

    <TextView
        android:id="@+id/text01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_purple"
        android:textIsSelectable="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="testSearchTopTags"
        android:text="@string/TestSearchTopTags" 
        android:visibility="gone"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="freeTextSearch"
        android:text="@string/FreeTextSearch" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="tagSearch"
        android:text="@string/TagSearch" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showQuestionView1"
        android:text="@string/TestQuestionView1" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showQuestionView2"
        android:text="@string/TestQuestionView2" />

</LinearLayout>