<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QuestionActivity" >

    <TextView
        android:id="@+id/question_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textStyle="bold" />

    <!-- Horizontal - Vote buttons - Contents of Question - User info -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="0dp"
        android:paddingRight="0dp" >

        <!-- Vote buttons -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:gravity="left"
            android:orientation="vertical"
            android:paddingLeft="0dp"
            android:paddingRight="0dp" >

            <ImageButton
                android:id="@+id/up_vote_question"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="upVoteQuestion"
                android:src="@drawable/ic_uparrow" />

            <TextView
                android:id="@+id/question_score"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textSize="10dp" />

            <ImageButton
                android:id="@+id/down_vote_question"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="downVoteQuestion"
                android:src="@drawable/ic_downarrow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="0dp"
            android:paddingRight="0dp" >

            <TextView
                android:id="@+id/question_content"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="left"
                android:layout_weight="0.9"
                android:textSize="6sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:orientation="horizontal"
                android:paddingLeft="0dp"
                android:paddingRight="0dp" >

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_tag1"
                    android:textSize="10dp" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_tag2"
                    android:textSize="10dp" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_tag3"
                    android:textSize="10dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:gravity="right"
            android:orientation="vertical"
            android:paddingLeft="0dp"
            android:paddingRight="0dp" >

            <TextView
                android:id="@+id/asked_at"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="left"
                android:layout_weight="0.7"
                android:textSize="10dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:src="@drawable/ic_user2" />

            <TextView
                android:id="@+id/question_user_name"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="left"
                android:layout_weight="0.7"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/question_user_score"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="left"
                android:layout_weight="0.7"
                android:textSize="10dp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/nr_of_answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nr_of_answers"
        android:textSize="16dp"
        android:textStyle="bold" />

    <!-- Horizontal - Vote buttons - Contents of answer - User info -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="0dp"
        android:paddingRight="0dp" >

        <!-- Vote buttons -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:gravity="left"
            android:orientation="vertical"
            android:paddingLeft="0dp"
            android:paddingRight="0dp" >

            <ImageButton
                android:id="@+id/up_vote_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="upVoteAnswer"
                android:src="@drawable/ic_uparrow" />

            <TextView
                android:id="@+id/answer_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="10dp" />

            <ImageButton
                android:id="@+id/down_vote_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="downVoteAnswer"
                android:src="@drawable/ic_downarrow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="0dp"
            android:paddingRight="0dp" >

            <TextView
                android:id="@+id/answer_content"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="left"
                android:layout_weight="0.9" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:gravity="right"
            android:orientation="vertical"
            android:paddingLeft="0dp"
            android:paddingRight="0dp" >

            <TextView
                android:id="@+id/answered_at"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="left"
                android:layout_weight="0.7"
                android:textSize="10dp" />

            <ImageButton
                android:id="@+id/answer_user_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:src="@drawable/ic_user2" />

            <TextView
                android:id="@+id/answer_user_name"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="left"
                android:layout_weight="0.7"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/answer_user_score"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="left"
                android:layout_weight="0.7"
                android:textSize="10dp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_answer"
        android:textSize="16dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingLeft="0dp"
        android:paddingRight="0dp" >

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:hint="@string/enter_answer"
            android:inputType="text" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/button_add"
            android:textSize="10dp" />
    </LinearLayout>

</LinearLayout>