<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TagSearchActivity"
    android:orientation="vertical"
    android:id="@+id/layout_main" >
    
    <LinearLayout 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_gravity="center_horizontal"
	    	android:layout_marginTop="10dp"
	    	android:layout_marginBottom="10dp">
                
		    <EditText 
		        android:id="@+id/edit_tag_search"
		        android:layout_width="200dp"
		        android:layout_height="wrap_content"
		        android:hint="@string/tag_search"
		        android:singleLine="true"/>
		    
		    <Button
	            android:id="@+id/button_tag_search"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="performTagSearch"
	            android:text="@string/search_command"
	            android:textSize="20sp" 
	            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:gravity="center_horizontal"
    	android:weightSum="1"
    	android:baselineAligned="false">
    	 	
        <LinearLayout 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="0.67"
            android:baselineAligned="false">
            
        <Button 
            android:id="@+id/button_northwest"
            style="@style/tag_button"  
            android:onClick="moveToCenter"/>
       
        <Button 
            android:id="@+id/button_northeast"
            style="@style/tag_button"
            android:onClick="moveToCenter"/>
        
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:gravity="center_horizontal"
    	android:weightSum="3">
        
        <Button 
            android:id="@+id/button_west"
			style="@style/tag_button"
			android:onClick="moveToCenter"/>
        
        <Button 
            android:id="@+id/button_center"
            style="@style/tag_button"
            android:onClick="selectForSearch"/>
                
		<Button 
            android:id="@+id/button_east"
            style="@style/tag_button"
            android:onClick="moveToCenter"/>
                        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:gravity="center_horizontal"
    	android:weightSum="1"
    	android:baselineAligned="false">
		
       <LinearLayout 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="0.67"
            android:baselineAligned="false">
        
        <Button 
            android:id="@+id/button_southwest"
            style="@style/tag_button"
            android:onClick="moveToCenter"/>
        
        <Button 
            android:id="@+id/button_southeast"
            style="@style/tag_button"
            android:onClick="moveToCenter"/>
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_gravity="center_horizontal"
    	android:layout_marginTop="10dp"
    	android:layout_marginBottom="10dp">
                
	    <EditText 
	        android:id="@+id/edit_search"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:hint="@string/string_search"
	        android:singleLine="true"/>
	    
	    <Button
            android:id="@+id/button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="performSearch"
            android:text="@string/search_command"
            android:textSize="20sp" 
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
    
    <com.yinyang.so.extras.PredicateLayout
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:id="@+id/layout_selectedtags">
    </com.yinyang.so.extras.PredicateLayout>
</LinearLayout>